Update integration with core (#52)
Rewrite manifest store 
Rewrite tests to support new schema
Add manifest upload
Remove tests that are premature 
Update core.proto
