# api/controller/manifest.go
@@ -2,8 +2,10 @@ package controller
 
 import (
 	"context"
+	"encoding/json"
 	"fmt"
 	"net/http"
+	"time"
 
 	l "github.com/equinor/seismic-cloud-api/api/logger"
 	"github.com/equinor/seismic-cloud-api/api/service/store"
@@ -20,14 +22,15 @@ func NewManifestController(ms store.ManifestStore) *ManifestController {
 
 // @Description get manifest file
 // @Produce  application/octet-stream
-// @Param   surfaceID  path    string     true        "File ID"
+// @Param   manifestID  path    string     true        "File ID"
 // @Success 200 {object} controller.Bytes OK
+// @Failure 404 {string} controller.APIError "Manifest not found"
 // @Failure 502 {object} controller.APIError "Internal Server Error"
 // @Router /manifest/{manifest_id} [get]
-func (msc *ManifestController) Fetch(ctx iris.Context) {
+func (msc *ManifestController) Download(ctx iris.Context) {
 	manifestID := ctx.Params().Get("manifestID")
 	bgctx := context.Background()
-	manifest, err := msc.ms.Fetch(bgctx, manifestID)
+	manifest, err := msc.ms.Download(bgctx, manifestID)
 	if err != nil {
 		ctx.StatusCode(404)
 		l.LogE(fmt.Sprintf("Could not download manifest: %s", manifestID), err)
@@ -41,4 +44,32 @@ func (msc *ManifestController) Fetch(ctx iris.Context) {
 		l.LogE(fmt.Sprintf("Error writing to response, manifestID %s", manifestID), err)
 		return
 	}
+}
+
+// @Description post manifest
+// @Produce  application/octet-stream
+// @Param   manifestID  path    string     true        "File ID"
+// @Success 200 {string} controller.Bytes OK
+// @Failure 502 {string} controller.APIError "Internal Server Error"
+// @Router /manifest/{manifest_id} [post]
+func (msc *ManifestController) Upload(ctx iris.Context) {
+	manifestID := ctx.Params().Get("manifestID")
+	var mani store.Manifest
+
+	dr := json.NewDecoder(ctx.Request().Body)
+	err := dr.Decode(&mani)
+	if err != nil {
+		ctx.StatusCode(502)
+		l.LogE("Unmarshaling to Manifest", err)
+		return
+	}
+	dctx, cancel := context.WithTimeout(ctx.Request().Context(), 1*time.Second)
+	defer cancel()
+	err = msc.ms.Upload(dctx, manifestID, mani)
+	if err != nil {
+		ctx.StatusCode(502)
+		l.LogE(fmt.Sprintf("Upload manifest: %s", manifestID), err)
+		return
+	}
+
 }
